# vyatta-siproxd

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules
lib/Vyatta/: Siproxd.pm
scripts/system/: siproxd-config.pl  siproxd-interface-config.pl  siproxd.init
templates/service/sip-proxy/: node.def
templates/service/sip-proxy/disabled/: node.def
templates/service/sip-proxy/listen-on/: node.def
templates/service/sip-proxy/listen-on/node.tag/disabled/: node.def
templates/service/sip-proxy/listen-on/node.tag/listen-port/: node.def
templates/service/sip-proxy/listen-on/node.tag/outbound-interface/: node.def
templates/service/sip-proxy/listen-on/node.tag/rtp-port/: node.def
templates/service/sip-proxy/listen-on/node.tag/siproxd-port/: node.def
